alter idea note (how to alter idea memory)